fix z-index handling based on https://darwin.telekom.de/darwin/auth/base/workflow/ById/15887714090001

--- a/skin/default/base/css/Output.HtmlDetail.css
+++ b/skin/default/base/css/Output.HtmlDetail.css
@@ -143,6 +143,7 @@ div.detailfieldspec{
    visible:hidden;
    display:none;
    margin-top:18px;
+   z-index:100;
 }
 
 
